<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingHorizontal="20dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.37" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_poster"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="@id/gl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedPosterImageView"
        tools:src="@drawable/ic_avenger" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toStartOf="@id/txt_rating"
        app:layout_constraintStart_toEndOf="@id/gl"
        app:layout_constraintTop_toTopOf="@id/img_poster"
        tools:text="Tenet" />

    <TextView
        android:id="@+id/txt_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txt_name"
        tools:text="6.7/10" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_add"
        android:text="@string/add_to_watch_list"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@color/alice_blue"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="@id/txt_name"
        app:layout_constraintTop_toBottomOf="@id/txt_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/remove_from_watchlist"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:visibility="gone"
        app:backgroundTint="@color/alice_blue"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="@id/txt_name"
        app:layout_constraintTop_toBottomOf="@id/txt_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/watch_trailer"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:cornerRadius="10dp"
        app:layout_constraintStart_toStartOf="@id/txt_name"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="btn_add,btn_remove"/>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/alice_blue"
        app:layout_constraintTop_toBottomOf="@id/img_poster" />

    <TextView
        android:id="@+id/txt_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/movie_short_description"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_description_title"
        tools:text="This is description" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/alice_blue"
        app:layout_constraintTop_toBottomOf="@id/txt_description" />

    <TextView
        android:id="@+id/txt_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/movie_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <com.example.qstmovieapp.ui.custom.MovieInfoView
        android:id="@+id/miv_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_detail_title"
        app:mif_label="Genre" />

    <com.example.qstmovieapp.ui.custom.MovieInfoView
        android:id="@+id/miv_release_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/miv_genre"
        app:mif_label="Release date" />
</androidx.constraintlayout.widget.ConstraintLayout>